# service-now-api-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: config.md  parameters.md  query.md
people_analytics_itsm_sdk/: settings.py
people_analytics_itsm_sdk/sdk/: __init__.py
people_analytics_itsm_sdk/sdk/servicenow/attachments/: client.py  exceptions.py
people_analytics_itsm_sdk/sdk/servicenow/helpers/: client.py  query_builder.py
people_analytics_itsm_sdk/sdk/servicenow/table/: client.py  exceptions.py
service_now_api_sdk/: exceptions.py  settings.py
service_now_api_sdk/sdk/: __init__.py
service_now_api_sdk/sdk/servicenow/attachments/: client.py  exceptions.py
service_now_api_sdk/sdk/servicenow/helpers/: client.py  query_builder.py
service_now_api_sdk/sdk/servicenow/table/: client.py  exceptions.py
service_now_api_sdk/sdk/servicenow/utils/: aux_functions.py  constants.py
