[tool.poetry]
name = "service_now_api_sdk"
version = "0.0.17"
description = "Service Now API SDK is used to facilitate integrations, automations and also code reuse"
authors = [
    { name="Guilherme Laércio da Silva", email="guilhermelaerciodasilva@gmail.com" },
    { name="Stone People Analytic", email="systems-techpeople@stone.com.br" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
