[tool.poetry]
name = "service_now_api_sdk"
version = "0.0.22"
description = "Service Now API SDK is used to facilitate integrations, automations and also code reuse"
authors = ["stone_people_analytics <systems-techpeople@stone.com.br>"]
maintainers = [
    "guilherme_lsilva <manager.guilherme.silva@gmail.com>",
    "diogo56 <diogo.amorim2001@gmail.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/people-analytics-tech/ service-now-api-sdk"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
